# rdeeToolkit

./: .gitignore  Changelog.md  README.md  universal-abstract-APIs.md
ahk/: install.ps1
ahk/3rd-party-libs/: JXON.ahk  source.md
ahk/myLibs/: rdee.ahk
ahk/utest/: gui_demo.ahk  utest.ahk
bash/: _array.sh  _string.sh  rdee.sh  readme.md  utest.sh
bash/_components/: _basic.sh  _io.sh  _os.sh  _sys.sh  _time.sh
c++/: .gitignore
c++/rdee/: CMakeLists.txt  main.cpp
c++/rdee/cmake/modules/: deploy.pybind11.cmake  get.pybind11.incdir.ps1  rdee.checksys.cmake
c++/rdee/include/: redtime.h
c++/rdee/pybind11/: cpp2py.cpp
c++/rdee/redtime/: CMakeLists.txt  redtime.cpp
c++/rdee/src/: redtime.cpp  redtime.h
c++/rdee/test/: CMakeLists.txt  mtest.cpp  test_basic.cpp
cmake/: .gitignore  ChangeLog.md  README.md  rdee.cmake
cmake/modules/: FindEasyNC.cmake  Findnetcdf.cmake  Findnetcdff.cmake  Findrdee_fortran.cmake  rdee.a2cluster.cmake  readme.md
cmake/scripts/: eval-args.sh
env-build/Linux/: config.bash  init.sh
init/: init.Linux.sh  init.Windows.ps1
powershell/rdee/: rdee.psd1  rdee.psm1
python/: features.md
python/rdee/: __dev__.py  __init__.py  __main__.py  _array.py  _code.py  _geo.py  _io.py  _o_basefunc.py  _o_error.py  _o_globalstate.py  _oop.py  _plot.py  _research.py  _time.py  _win.py  _x_array.py  _x_logging.py  _x_os.py  _x_string.py  _x_time.py  _x_win.py  _xx_redtime.py.jj2  _xx_tsarray.py  rdee_array.py  rdee_code.py  rdee_io.py  rdee_marray.py  rdee_research.py  rdee_string.py  rdee_time.py  render.ps1  unitTest.py
(+6 files in other folders)
